--- a/content/5_Thong_ke_suy_dien/3_ANOVA_mot_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/3_ANOVA_mot_nhan_to.tex
@@ -1,1 +1,9 @@
 \subsection{Phân tích phương sai một nhân tố (Single-factor ANOVA)}
+5.Phân tích ANOVA:
++ Dữ liệu: 
+	Y: 1 biến phụ thuộc,
+	X: 1 biến nhân tố hay biến giải thích hay biến phân loại,
++Mục tiêu:
+	- Đánh giá biến X có ảnh hưởng đến biến phụ thuộc Y không?
++Định nghĩa mô hình:
+	- $y{ij}$=
