--- a/content/5_Thong_ke_suy_dien/3_ANOVA_mot_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/3_ANOVA_mot_nhan_to.tex
@@ -16,7 +16,6 @@ Mục tiêu:
         \[
         H_{1}: \exists i, j \text{ sao cho } \mu_{i} \neq \mu_{j}
         \]
-      
 \end{itemize}
 Đọc dữ liệu từ file và đưa ra bảng dữ liệu:
 \begin{figure}[!htbp]
@@ -34,7 +33,7 @@ Như đã thấy trên Hình, chỉ có 5 giá trị của coupon\_discount là 
 \end{figure}
 
 Theo kết quả như hình trên, giá trị p-value (tức Pr(>F)) là 0.445 lớn hơn ngưỡng ý nghĩa phổ biến (0.05). Do đó, nhóm không đủ bằng chứng thống kê để kết luận rằng, chiết khấu (coupon\_discount) có ảnh hưởng đến giá trị đơn hàng (order\_price). Nói cách khác, sự khác biệt về giá trị đơn hàng giữa các nhóm chiết khấu có thể do yếu tố ngẫu nhiên.
-Cũng trên bảng phân tích gọn (Hình 5.1),  số lượng mặt hàng (count) theo từng loại chiết khấu (coupon\_discount) cũng  không sai lệch quá lớn ( khoảng lệch giữa giá trị nhỏ nhất và lớn nhất theo giá trị nhỏ nhất chỉ là 8.654\%), điều này càng cũng cố tính chính xác của phương pháp.
+Cũng trên bảng phân tích gọn (Hình 5.1),  số lượng mặt hàng (count) theo từng loại chiết khấu (coupon\_discount) cũng  không sai lệch quá lớn ( khoảng lệch giữa giá trị nhỏ nhất và lớn nhất theo giá trị lớn nhất chỉ là 8.654\%), điều này càng cũng cố tính chính xác của phương pháp.
 nhóm có thể tính toán kích thước hiệu ứng (effect size) để đánh giá mức độ ảnh hưởng của một yếu tố (biến độc lập). Sử dụng Enhóm-squared (ɳ2) đo lường mức độ ảnh hưởng của coupon\_discount. Diễn dãy mở rộng (Field, 2013):
 
 \begin{table}[ht]
