Xóa KTC và kiểm định section

--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
         \small \bfseries 
         BÁO CÁO PHÂN CÔNG NHIỆM VỤ VÀ KẾT QUẢ THỰC HIỆN ĐỀ TÀI         
         
-        NHÓM: 10 -- LỚP: TN01 -- HỌC KỲ: 241 -- MÔN: XÁC SUẤT VÀ THỐNG KÊ (CH2013)    
+        NHÓM: 10 -- LỚP: TN01 -- HỌC KỲ: 241 -- MÔN: XÁC SUẤT VÀ THỐNG KÊ   
     \renewcommand{\arraystretch}{1.2}
     \begin{table}[h!]
         \centering
@@ -60,8 +60,7 @@
 \input{content/2_Co_so_ly_thuyet.tex}
 \input{content/3_Tien_xu_ly_so_lieu.tex}
 \input{content/4_Thong_ke_mo_ta.tex}
-\input{content/5_Thong_ke_suy_dien/1_Khoang_tin_cay_mot_mau.tex}
-\input{content/5_Thong_ke_suy_dien/2_Kiem_dinh_hai_mau.tex}
+\section{Thống kê suy diễn}
 \input{content/5_Thong_ke_suy_dien/3_ANOVA_mot_nhan_to.tex}
 \input{content/5_Thong_ke_suy_dien/4_ANOVA_hai_nhan_to.tex}
 \input{content/5_Thong_ke_suy_dien/5_Hoi_quy_tuyen_tinh_da_bien.tex}
