--- a/content/5_Thong_ke_suy_dien/3_Hoi_quy_tuyen_tinh_da_bien.tex
+++ b/content/5_Thong_ke_suy_dien/3_Hoi_quy_tuyen_tinh_da_bien.tex
@@ -1,4 +1,4 @@
-\subsection{Hồi quy tuyến tính đa biến}
+\subsection{Hồi quy tuyến tính đa bội}
 \subsubsection{Mục đích}
 
 Mục đích của mô hình hồi quy tuyến tính này là dự đoán giá trị tổng đơn hàng dựa trên các yêu tố giải thích khác nhau như giá trị đơn hàng, phí vận chuyển,..
