--- a/content/2_Co_so_ly_thuyet.tex
+++ b/content/2_Co_so_ly_thuyet.tex
@@ -1,8 +1,27 @@
 \section{Kiến thức nền}\label{Kien thuc nen}
+\subsection{Công thức Haversine}
+Haversine Formula là công thức tính khoảng cách địa lý giữa 2 điểm trên bề mặt một hình cầu, chẳng hạn như Trái Đất. Bằng cách gán hai giá trị kinh độ và vĩ độ của hai điểm khác nhau trên Trái Đất vào công thức Haversine, ta có thể tính khoảng cách vòng tròn lớn ( khoảng cách ngắn nhất giữa hai điểm trên về mặt hình cầu).
+\[
+a = \sin^2\left(\frac{\Delta \phi}{2}\right) + \cos(\phi_1) \cdot \cos(\phi_2) \cdot \sin^2\left(\frac{\Delta \lambda}{2}\right)
+\]
+\[
+c = 2 \cdot \text{atan2}\left(\sqrt{a}, \sqrt{1-a}\right)
+\]
+\[
+d = R \cdot c
+\]
+\begin{itemize}
+  \item \( \phi_1, \phi_2 \) là vĩ độ của 2 điểm (đơn vị radian)
+  \item \( \lambda_1, \lambda_2 \) là kinh độ của 2 điểm (đơn vị radian)
+  \item \( \Delta \phi = \phi_2 - \phi_1 \)
+  \item \( \lambda = \lambda_2 - \lambda_1 \)
+  \item \( R \) là bán kính Trái đất (\( R = 6371 km \))
+  \item \( d \) là khoảng cách của hai điểm
+\end{itemize}
 \subsection{Thống kê mô tả}
 Phương pháp thống kê mô tả (descriptive statistics) là một phương pháp trong khoa học thống kê được sử dụng để mô tả và tóm tắt các dữ liệu một cách đơn giản và dễ hiểu. Phương pháp này giúp chúng ta hiểu thông tin cơ bản về các biến trong dữ liệu mà không cần đưa ra các phán đoán hay suy luận về mối quan hệ giữa các biến. Các phương pháp thống kê mô tả thường bao gồm các đại lượng thống kê như \textbf{giá trị trung bình, phương sai, độ lệch chuẩn, phân vị, tỉ lệ phần trăm, đồ thị và biểu đồ}. Các đại lượng này giúp chúng ta hiểu về trung tâm, phân tán và hình dạng của dữ liệu.
 \subsection{Thống kê suy diễn}
-Trong bài tập lớn này, nhóm có vận dụng những kiến thức được học trên lớp như xây dựng khoảng tin cậy, kiểm định giả thuyết, định lý giới hạn trung tâm, v.v... Tuy nhiên, 
+Trong bài tập lớn này, nhóm có vận dụng những kiến thức được học trên lớp như xây dựng khoảng tin cậy, kiểm định giả thuyết, định lý giới hạn trung tâm, v.v... Vì thế nhóm sẽ không trình bày lại trong phần này. Thay vào đó, nhóm sẽ tập trung giới thiệu những kiến thức mới mà nhóm tự tìm tòi.
 \subsubsection{Phân tích phương sai 2 nhân tố}
 Phân tích phương sai 2 nhân tố (Two-Way ANOVA) là một phương pháp thống kê được sử dụng để kiểm tra sự ảnh hưởng của hai yếu tố (hay còn gọi là biến độc lập) đến một biến phụ thuộc (biến kết quả), cũng như mối quan hệ tương tác giữa chúng.
 
@@ -19,7 +38,7 @@ Trong đó:
   \item \( (\alpha\beta)_{ij} \): hiệu ứng tương tác giữa yếu tố \( A \) và \( B \).
   \item \( \epsilon_{ijk} \): sai số ngẫu nhiên (residual).
 \end{itemize}
-\subsection{Hồi quy tuyến tính đa bội}
+\subsubsection{Hồi quy tuyến tính đa bội}
 Hồi quy tuyến tính đa biến là một phương pháp thống kê được sử dụng để mô hình hóa mối quan hệ giữa một biến phụ thuộc (hay còn gọi là biến mục tiêu) và một hoặc nhiều biến độc lập (biến giải thích). Mục tiêu của hồi quy tuyến tính đa biến là dự đoán giá trị của biến phụ thuộc dựa trên các giá trị của các biến độc lập.
 
 Mô hình hồi quy tuyến tính đa biến có dạng:
