Xong tài liệu tham khảo

--- a/content/8_Tai_lieu_tham_khao.tex
+++ b/content/8_Tai_lieu_tham_khao.tex
@@ -1,18 +1,18 @@
-
 \newpage
+\addtocounter{page}{-1}
+\cfoot{}  % Disable center footer (page number will be removed)
+\lfoot{}  % Disable left footer
+\rfoot{}  % Disable right footer
+\renewcommand{\footrulewidth}{0pt}
 \addcontentsline{toc}{section}{Tài liệu tham khảo}
 \renewcommand{\refname}{Tài liệu tham khảo}
 \begin{thebibliography}{9}
-    \bibitem{NguyenKD}
-    Nguyễn Kiều Dung, Slides bài giảng Xác suất thống kê.
-    
-    \bibitem{NguyenDH}
-    Nguyễn Đình Huy, Giáo trình Xác suất thống kê, NXB ĐHQG TP.HCM.
-    
-    \bibitem{Dalgaard}
-    Peter Dalgaard, Introductory Statistics with R, Springer, 2008.
-    
-    \bibitem{Kerns}
-    G. Jay Kerns, Introduction to Probability and Statistics Using R, 2nd ed., CRC, 2015.
-    
+    \bibitem{r1}
+    V.T. Nguyễn, \textit{Phân tích dữ liệu với R}, Nhà xuất bản Tổng hợp Thành phố HCM, 2014.
+    \bibitem{r2}
+    T. Tran, \textit{Lập trình R: tự học lập trình R từ cơ bản đến nâng cao}, Nhà xuất bản Đại học sư phạm HCM, 2019.
+    \bibitem{r3}
+    Nguyễn Đình Huy, \textit{BÀI TẬP XÁC SUẤT THỐNG KÊ}, NHÀ XUẤT BẢN ĐẠI HỌC QUỐC GIA TP. HỒ CHÍ MINH, 2023.
+    \bibitem{r4}
+    Nguyễn Đình Huy, \textit{GIÁO TRÌNH XÁC SUẤT VÀ THỐNG KÊ}, NHÀ XUẤT BẢN ĐẠI HỌC QUỐC GIA TP. HỒ CHÍ MINH, 2023.
 \end{thebibliography}
