--- a/content/5_Thong_ke_suy_dien/3_Hoi_quy_tuyen_tinh_da_bien.tex
+++ b/content/5_Thong_ke_suy_dien/3_Hoi_quy_tuyen_tinh_da_bien.tex
@@ -80,7 +80,7 @@ Hồi quy trên Rstudio ta có được:
   \includegraphics[width=0.7\linewidth]{graphics/5.5.3.png}
   \caption{Kết quả hồi quy tuyến tính mô hình 2 }
 \end{figure} 
-\newpage
+
 Dựa trên kết quả từ hàm \textbf{summary(model\_2)}, ta có thể rút ra các nhận xét:
 
 Với mức ý nghĩa 5\%, ta phân tích phần Coeficients(hệ số) như sau:
@@ -152,6 +152,7 @@ Ta thấy các hệ số $\beta_0= 1640\in(1395.91904; 1884.5482), \beta_1= 0.88
 \paragraph{Kiểm định bằng đồ thị}
 
 Kiểm tra giả định mô hình hồi quy tuyến tính bằng đồ thị:
+\newpage
 
 \begin{figure}[h]
   \centering
@@ -159,7 +160,8 @@ Kiểm tra giả định mô hình hồi quy tuyến tính bằng đồ thị:
   \caption{Đồ thị kiểm định mô hình hồi quy  tuyến tính }
 \end{figure}
 
-Nhận xét dựa trên đồ thị chuẩn đoán:\\
+Nhận xét dựa trên đồ thị chuẩn đoán:
+
 \textbf{Residual vs Fitted:}
 \begin{itemize}
  \item Các điểm dữ liệu không hoàn toàn phân bố ngẫu nhiên quanh đường ngang tại 0, gợi ý rằng có thể có vấn đề với tuyến tính hoặc phương sai không đồng nhất. 
