--- a/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
@@ -1,21 +1,22 @@
+
 \subsection{Phân tích phương sai hai nhân tố (Two-factor ANOVA)}
-\subsubsection{Bài toán}
-Trong phần nghiên cứu này, chúng tôi sẽ sử dụng ANOVA 2 yếu tố không lặp để phân tích xem liệu \textbf{Kinh độ vị trí khánh hàng (Customer\_long)} và \textbf{Vĩ độ vị trí khánh hàng (Customer\_lat)} có ảnh hưởng đến \textbf{Phí giao hàng (Delivery\_charge)} hay không?
+\subsubsection{Mục đích}
+Trong phần nghiên cứu này, chúng tôi sẽ sử dụng ANOVA 2 yếu tố không lặp để phân tích xem liệu \textbf{Phí giao hàng (delivery\_charges)} và \textbf{Mã giảm giá  (coupon\_discount)} có ảnh hưởng đến \textbf{Chi phí tổng thể (order\_total)} hay không?
 
 Giả thiết thống kê được thực hiện với mức ý nghĩa $\alpha = 0.05$.
 
 \begin{itemize}
     \item \( H\_0 \): 
     \begin{enumerate}
-        \item \( H\_{0A}: \) Không có sự khác biệt giữa các giá trị trung bình của \textbf{Delivery\_charge} giữa các nhóm \textbf{Customer\_long}, tức là:
+        \item \( H\_{0A}: \) Không có sự khác biệt giữa các giá trị trung bình của \textbf{order\_total} giữa các nhóm \textbf{delivery\_charges}, tức là:
         \[
         \mu\_{A1} = \mu\_{A2} = \ldots = \mu\_{Ak}
         \]
-        \item \( H\_{0B}: \) Không có sự khác biệt giữa các giá trị trung bình của \textbf{Delivery\_charge} giữa các nhóm \textbf{Customer\_lat}, tức là:
+        \item \( H\_{0B}: \) Không có sự khác biệt giữa các giá trị trung bình của \textbf{order\_total} giữa các nhóm \textbf{coupon\_discount}, tức là:
         \[
         \mu\_{B1} = \mu\_{B2} = \ldots = \mu\_{Bl}
         \]
-        \item \( H\_{0AB}: \) Không có sự tương tác giữa \textbf{Customer\_long} và \textbf{Customer\_lat} đối với \textbf{Delivery\_charge}, tức là:
+        \item \( H\_{0AB}: \) Không có sự tương tác giữa \textbf{delivery\_charges} và \textbf{coupon\_discount} đối với \textbf{order\_total}, tức là:
         \[
         \text{Không có tác động tương tác giữa Manufacturer và Core\_Speed\_Value}
         \]
@@ -23,21 +24,67 @@ Giả thiết thống kê được thực hiện với mức ý nghĩa $\alpha =
     
     \item \( H\_1 \): 
     \begin{enumerate}
-        \item \( H\_{1A}: \) Có ít nhất một cặp giá trị trung bình của \textbf{Delivery\_charge} khác nhau giữa các nhóm \textbf{Customer\_long}, tức là:
+        \item \( H\_{1A}: \) Có ít nhất một cặp giá trị trung bình của \textbf{order\_total} khác nhau giữa các nhóm \textbf{delivery\_charges}, tức là:
         \[
         \exists \, i \neq j \, : \, \mu\_{Ai} \neq \mu\_{Aj}
         \]
-        \item \( H\_{1B}: \) Có ít nhất một cặp giá trị trung bình của \textbf{Delivery\_charge} khác nhau giữa các nhóm \textbf{Customer\_lat}, tức là:
+        \item \( H\_{1B}: \) Có ít nhất một cặp giá trị trung bình của \textbf{order\_total} khác nhau giữa các nhóm \textbf{coupon\_discount}, tức là:
         \[
         \exists \, i \neq j \, : \, \mu\_{Bi} \neq \mu\_{Bj}
         \]
-        \item \( H\_{1AB}: \) Có sự tương tác giữa \textbf{Customer\_long} và \textbf{Customer\_lat} đối với \textbf{Delivery\_charge}, tức là:
+        \item \( H\_{1AB}: \) Có sự tương tác giữa \textbf{delivery\_charges} và \textbf{coupon\_discount} đối với \textbf{order\_total}, tức là:
         \[
-        \exists \, (i, j) \, : \, \text{Tác động tương tác giữa Customer\_long và Customer\_lat tồn tại}
+        \exists \, (i, j) \, : \, \text{Tác động tương tác giữa delivery\_charges và coupon\_discount tồn tại}
         \]
     \end{enumerate}
 \end{itemize}
 \subsubsection{Kiểm tra điều kiện cho dữ liệu}
-Trước khi tiến hành phân tích ANOVA 2 chiều, chúng tôi cần kiểm tra các điều kiện cần thiết cho dữ liệu thì \textbf{Biến phụ thuộc:} \textbf{Delivery\_charge} là một biến không có phân phối chuẩn, tồn tại nhiều khiếm khuyết dữ liệu và có các điểm dị biệt.
+Trước khi tiến hành phân tích ANOVA 2 chiều, chúng tôi cần kiểm tra các điều kiện cần thiết cho dữ liệu thì \textbf{Biến phụ thuộc:} \textbf{order\_total} là một biến không có phân phối chuẩn, tồn tại nhiều khiếm khuyết dữ liệu và có các điểm dị biệt.
 
 $ \Rightarrow $ Như vậy các điều kiện giả thiết về dữ liệu không được thỏa mãn, do đó kết quả phân tích ANOVA có thể không chính xác và chỉ mang tính chất tham khảo.
+\subsubsection{Tiến hành phân tích}
+Chúng tôi tiến hành phân tích ANOVA 2 chiều trong phần phần mềm r. 
+
+         Kết quả nhận được: 
+        
+        \begin{figure}[!htbp]
+            \centering
+            \includegraphics[width=1\linewidth]{graphics/5.4.3.png}
+            \caption{Phân tích anova 2 yếu tố}
+        \end{figure}
+        
+        
+        Kết quả và nhận xét: 
+        Kết quả phân tích ANOVA hai yếu tố được trình bày trong hình 5.4. Kết quả cho thấy rằng cả ba yếu tố \textbf{coupon\_discount}, \textbf{delivery\_charges}, và sự tương tác giữa chúng đều có ảnh hưởng đáng kể đến \textbf{order\_total} với mức ý nghĩa $\alpha = 0.05$. Dưới đây là các nhận xét chi tiết:
+        
+            \begin{itemize}
+    \item \textbf{coupon\_discount}:
+    \begin{itemize}
+        \item Với \textbf{Df = 4}, có 4 mức độ khác nhau trong yếu tố \textbf{coupon\_discount}.
+        \item Giá trị \textbf{F = 973.68} và \textbf{Pr(>F) < 2e-07***} cho thấy rằng sự khác biệt giữa các mức độ của \textbf{coupon\_discount} có ảnh hưởng đáng kể đến \textbf{order\_total}. Do đó, ta bác bỏ giả thuyết không \(H_0\) cho yếu tố này.
+    \end{itemize}
+
+    \item \textbf{delivery\_charges}:
+    \begin{itemize}
+        \item Với \textbf{Df = 467}, có 467 mức độ khác nhau trong yếu tố \textbf{delivery\_charges}.
+        \item Giá trị \textbf{F = 945.37} và \textbf{Pr(>F) < 1.09e-07***} cho thấy rằng sự khác biệt giữa các mức độ của \textbf{delivery\_charges} có ảnh hưởng đáng kể đến \textbf{order\_total}. Do đó, ta bác bỏ giả thuyết không \(H_0\) cho yếu tố này.
+    \end{itemize}
+
+    \item \textbf{Tương tác giữa coupon\_discount và delivery\_charges}:
+    \begin{itemize}
+        \item Với \textbf{Df = 23}, có 23 mức độ tương tác giữa hai yếu tố \textbf{coupon\_discount} và \textbf{delivery\_charges}.
+        \item Giá trị \textbf{F = 37.84} và \textbf{Pr(>F) = 0.000372***} cho thấy rằng có sự tương tác có ý nghĩa thống kê giữa hai yếu tố này và ảnh hưởng đến \textbf{order\_total}. Do đó, ta bác bỏ giả thuyết không \(H_0\) cho sự tương tác này.
+    \end{itemize}
+
+    \item \textbf{Residuals}:
+    \begin{itemize}
+        \item Số dư tự do còn lại là \textbf{Df = 5}.
+        \item Tổng bình phương của sai số là \textbf{Sum Sq = 4.203e+08}.
+    \end{itemize}
+    \end{itemize}
+
+ Từ những kết quả trên, chúng tôi kết luận rằng cả yếu tố \textbf{coupon\_discount}, \textbf{delivery\_charges}, và sự tương tác giữa chúng đều có ảnh hưởng quan trọng và có ý nghĩa thống kê đối với \textbf{order\_total}. Điều này cho thấy rằng các yếu tố này cần được cân nhắc kỹ lưỡng khi định giá sản phẩm.
+               
+        
+\subsubsection{Kết luận}
+Phân tích ANOVA 2 chiều cho thấy \textbf{coupon\_discount}, \textbf{delivery\_charges}, và sự tương tác giữa chúng đều có ảnh hưởng đáng kể đến \textbf{order\_total}. Mặc dù có một số hạn chế về phân phối chuẩn và phương sai không đồng nhất, kết quả này vẫn cung cấp cơ sở tin cậy để đánh giá và điều chỉnh chiến lược giá sản phẩm.
