--- a/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
@@ -13,7 +13,7 @@ Giả thiết thống kê được thực hiện với mức ý nghĩa $\alpha =
         \item Đánh giá xem biến nhân tố A có ảnh hưởng đến biến phụ thuộc hay không?
         
         \[
-            H_{0A}: \tau_{1} = \tau_{2} = \tau_{3} = \dots = \tau_{n} = 0
+            H_{0A}: \tau_{1} = \tau_{2} = \tau_{3} = \dots = \tau_{a} = 0
             \]
             \[
             H_{1A}: \tau_{i} \neq  0 \text{ với ít nhất một i }
@@ -25,7 +25,7 @@ Giả thiết thống kê được thực hiện với mức ý nghĩa $\alpha =
         \item Đánh giá xem biến nhân tố B có ảnh hưởng đến biến phụ thuộc hay không?
         
         \[
-            H_{0B}: \beta_{1} = \beta_{2} = \beta_{3} = \dots = \beta_{n} = 0
+            H_{0B}: \beta_{1} = \beta_{2} = \beta_{3} = \dots = \beta_{b} = 0
             \]
             \[
             H_{1B}: \beta_{j} \neq  0 \text{ với ít nhất một j }
