--- a/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
@@ -33,7 +33,7 @@ Giả thiết thống kê được thực hiện với mức ý nghĩa $\alpha =
     \end{itemize}
     \item Đối với tương tác giữa A và B  
     \begin{itemize}
-        \item Đánh giá xem các biến nhân tố A và B có ảnh hưởng đến biến phụ thuộc hay không?
+        \item Đánh giá xem các biến nhân tố A và B có tương tác với nhau hay không?
         
         \[
             H_{0AB}: \tau\beta_{11} = \tau\beta_{12}  = \dots = \tau\beta_{AB} = 0 
